# desktop-infomaniak-drive

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackOptions.cmake  CPackSourceConfig.cmake  README.md  VERSION.cmake  client.qrc  config.h.in  sync-exclude.lst  theme.qrc
admin/linux/: build-appimage.sh
admin/osx/: create_mac.sh.cmake  post_install.sh.cmake  sign_app.sh
cmake/modules/: MacOSXBundleInfo.plist.in  NSIS.template.in
infomaniak/: OEM.cmake  license.txt  theme.qrc
resources/: stylesheet.qss  stylesheetblack.qss  stylesheetwhite.qss
resources/styles/: stylesheetblack.qss  stylesheetwhite.qss
shell_integration/dolphin/: ownclouddolphinoverlayplugin.cpp  ownclouddolphinoverlayplugin.json  ownclouddolphinpluginhelper.h
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  cmd.cpp
src/common/: common.cmake  filesystembase.cpp  filesystembase.h  ownsql.cpp  syncjournaldb.cpp  syncjournalfilerecord.h  utility.cpp  utility.h  utility_mac.cpp  utility_mac.mm  utility_unix.cpp  utility_win.cpp  vfs.cpp  vfs.h
src/crashreporter/: CMakeLists.txt  main.cpp
src/csync/: CMakeLists.txt  csync_exclude.cpp  csync_exclude.h  csync_util.cpp
src/gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  accountinfo.cpp  accountinfo.h  accountitem.cpp  accountitem.h  accountitemwidget.cpp  accountitemwidget.h  accountmanager.cpp  accountmanager.h  accountsettings.cpp  accountsettings.h  accountsettings.ui  accountstate.cpp  accountstate.h  actionwidget.cpp  actionwidget.h  activitylistmodel.cpp  activitywidget.cpp  activitywidget.h  adddriveconfirmationwidget.cpp  adddriveconfirmationwidget.h  adddrivelocalfolderwidget.cpp  adddrivelocalfolderwidget.h  adddriveloginwidget.cpp  adddriveloginwidget.h  adddriveserverfolderswidget.cpp  adddriveserverfolderswidget.h  adddrivesmartsyncwidget.cpp  adddrivesmartsyncwidget.h  adddrivestartwidget.cpp  adddrivestartwidget.h  adddrivewidget.cpp  adddrivewidget.h  adddrivewizard.cpp  adddrivewizard.h  application.cpp  application.h  bandwidthdialog.cpp  (+178 more)
src/libcommon/: CMakeLists.txt  commonutility.cpp  commonutility.h
src/libsync/: CMakeLists.txt  abstractnetworkjob.cpp  account.cpp  account.h  configfile.cpp  configfile.h  discovery.cpp  discovery.h  discoveryphase.cpp  filesystem.cpp  infomaniaktheme.cpp  infomaniaktheme.h  logger.cpp  logger.h  networkjobs.cpp  networkjobs.h  (+15 more)
src/libsync/vfs/win/: CMakeLists.txt  CloudFileProvider.h  CloudFileProviderDll.h  DebugCbk.h  NotifyCbk.h  debug.h  vfs.h  vfs_win.cpp  vfs_win.h
translations/: client_TW.ts  client_ca.ts  client_cs.ts  client_de.ts  client_el.ts  client_en.ts  client_es.ts  client_es_AR.ts  client_et.ts  client_eu.ts  client_fa.ts  client_fi.ts  client_fr.ts  client_gl.ts  client_hu.ts  client_it.ts  client_ja.ts  client_nb_NO.ts  client_nl.ts  client_pl.ts  client_pt.ts  client_pt_BR.ts  client_ru.ts  client_sk.ts  client_sl.ts  client_sr.ts  client_sv.ts  client_th.ts  client_tr.ts  client_uk.ts  client_zh_CN.ts  client_zh_TW.ts
(+53 files in other folders)
